--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,12 @@
-abraflexi-pricefixer (2.8) UNRELEASED; urgency=low
+abraflexi-pricefixer (2.9.0) UNRELEASED; urgency=medium
+
+  * Source price fix
+
+ -- Vítězslav Dvořák <info@vitexsoftware.cz>  Thu, 25 Apr 2024 10:37:03 +0200
+
+abraflexi-pricefixer (2.8) jammy; urgency=low
 
   * Initial release. Closes: #nnnn
     <nnnn is the bug number of your ITP>
 
- -- Vítězslav Dvořák <info@vitexsoftware.cz>  Thu, 21 Mar 2024 11:50:44 +0100
+ -- Vítězslav Dvořák <info@vitexsoftware.cz>  Thu, 25 Apr 2024 10:36:45 +0200
