--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,14 @@
-abraflexi-pricefixer (2.10.0) UNRELEASED; urgency=medium
+abraflexi-pricefixer (2.11.0) UNRELEASED; urgency=medium
+
+  * Do not save unchanged price
+
+ -- vitex <info@vitexsoftware.cz>  Tue, 06 Aug 2024 19:23:00 +0200
+
+abraflexi-pricefixer (2.10.0) jammy; urgency=medium
 
   * Beta Release
 
- -- vitex <info@vitexsoftware.cz>  Fri, 02 Aug 2024 00:28:01 +0200
+ -- vitex <info@vitexsoftware.cz>  Tue, 06 Aug 2024 19:22:45 +0200
 
 abraflexi-pricefixer (2.9.2) jammy; urgency=medium
 
